# doc-parser-vibe-code

./: Makefile  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/database/: database.py  models.py
app/schemas/: document.py
app/services/: extraction_service.py  llm_service.py  pdf_service.py
frontend/: streamlit_app.py
